--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -374,6 +374,65 @@ hgroup.articles-content{
 
 	// border-top: 10px solid var(--hover-color);
 }
+
+// hgroup.articles-content h1::after{
+	// content: " ]";
+// }
+
+html.light #article-title{
+	// text-shadow: 1px 3px 3px #4b4b4b;
+	// text-shadow: 0px 3px 3px var(--text-2);
+	text-shadow: 
+				0px 3px 3px var(--text-2);
+	font-weight: 900;
+	// -webkit-text-fill-color: transparent;
+	// -webkit-text-fill-color: var(--text-2);
+  	// -webkit-text-stroke: 2px;
+
+
+	// text-shadow: 1px 1px 1px #4b4b4b,
+    //          1px 2px 1px #4b4b4b,
+    //          1px 3px 1px #4b4b4b,
+            //  1px 4px 1px #4b4b4b,
+            //  1px 5px 1px #4b4b4b,
+            //  1px 6px 1px #4b4b4b,
+            //  1px 10px 5px rgba(16, 16, 16, 0.5),
+            //  1px 15px 10px rgba(16, 16, 16, 0.4),
+            //  1px 20px 30px rgba(16, 16, 16, 0.3),
+            //  1px 25px 50px rgba(16, 16, 16, 0.2);
+	// font-size: 70px;
+	// font-weight: 600;
+	// color: #fdfdfe;
+	// text-shadow: 0px 0px 5px var(--hover-color), 0px 0px 10px var(--hover-color), 0px 0px 10px var(--hover-color),
+	// 	0px 0px 20px var(--hover-color);
+}
+html.dark #article-title{
+	// text-shadow: 1px 3px 3px #4b4b4b;
+	// text-shadow: 0px 3px 3px var(--text-2);
+	text-shadow: 0px 1px 3px var(--hover-color),
+				0px 1px 5px var(--hover-color);
+	font-weight: 900;
+	// -webkit-text-fill-color: transparent;
+	// -webkit-text-fill-color: var(--text-2);
+  	// -webkit-text-stroke: 2px;
+
+
+	// text-shadow: 1px 1px 1px #4b4b4b,
+    //          1px 2px 1px #4b4b4b,
+    //          1px 3px 1px #4b4b4b,
+            //  1px 4px 1px #4b4b4b,
+            //  1px 5px 1px #4b4b4b,
+            //  1px 6px 1px #4b4b4b,
+            //  1px 10px 5px rgba(16, 16, 16, 0.5),
+            //  1px 15px 10px rgba(16, 16, 16, 0.4),
+            //  1px 20px 30px rgba(16, 16, 16, 0.3),
+            //  1px 25px 50px rgba(16, 16, 16, 0.2);
+	// font-size: 70px;
+	// font-weight: 600;
+	// color: #fdfdfe;
+	// text-shadow: 0px 0px 5px var(--hover-color), 0px 0px 10px var(--hover-color), 0px 0px 10px var(--hover-color),
+	// 	0px 0px 20px var(--hover-color);
+}
 // hgroup.articles-content::before{
 // 	content: '';
 // 	position: absolute;
