fix article title centered

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -379,6 +379,10 @@ hgroup.articles-content{
 	// content: " ]";
 // }
 
+#article-title{
+	text-align: center;
+	
+}
 html.light #article-title{
 	// text-shadow: 1px 3px 3px #4b4b4b;
 	// text-shadow: 0px 3px 3px var(--text-2);
