--- a/layouts/partials/articles-title.html
+++ b/layouts/partials/articles-title.html
@@ -2,7 +2,7 @@
   <hgroup>
     {{/*  REFACTOR breadcrumbs  */}}
     {{/*  {{ partial "breadcrumbs.html" . }}  */}}
-    <h1 id="article-title" class="center-text">{{ .Title }}</h1>
+    <h1 id="article-title" >{{ .Title }}</h1>
     {{/*  {{ with .Params.Description }}
       <p>{{ . | markdownify }}</p>
     {{ end }}  */}}
