--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -364,6 +364,8 @@ hgroup.articles-content > p:first-of-type {
 	text-indent: 30px; /* Adjust the indentation as needed */
 }
 hgroup.articles-content{
+// hgroup.articles-content *{
+	color: var(--text-2);
 	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
 	// -moz-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
 	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
