--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -378,7 +378,7 @@ hgroup.articles-content{
 	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.3);
 	// -moz-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.3);
 	// box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.3);
-	position: relative;
+	// position: relative;
 	// padding-left: var(--articles-side-margin);
 	// padding-right: var(--articles-side-margin);
 	// padding-top: calc(var(--articles-side-margin)/2);
@@ -393,8 +393,6 @@ hgroup.articles-content{
 #article-title{
 	text-align: center;
 border-bottom: 0px solid transparent;
-
-	
 }
 html.light #article-title{
 	// text-shadow: 1px 3px 3px #4b4b4b;
