--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1474,7 +1474,7 @@ hgroup.articles-content > ol{
 
 // hgroup.articles-content
 // hgroup.articles-content p, ul{
-hgroup.articles-content p, hgroup.articles-content ul{
+hgroup.articles-content p, hgroup.articles-content ul, hgroup.articles-content ol{
 	// width: 100%;
 	// text-align: left;
 
