--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1506,17 +1506,19 @@ nav.categories ul li a{
 .articles-index{
 	color: var(--text-2);
 	width: 250px;
+	min-width: 190px;
 	height: 100vh; /* Full height */
 	// position: fixed; /* Stays in place while scrolling */
 	position: sticky;
 	top: 15px;
 	// top: 190px;
-	left: 0;
+	// left: 0; // this makes the index sticky to the X axis!
 	// background: #4e4e4e;
 	padding: 20px;
 	// border-right: 2px solid #ddd;
 	overflow-y: auto; /* Scroll if content overflows */
 	// display: none;
+	// flex-shrink: 0;
 
 	// box shadow
 	// -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
