--- a/layouts/partials/articles-title.html
+++ b/layouts/partials/articles-title.html
@@ -6,39 +6,63 @@
     {{/*  {{ with .Params.Description }}
       <p>{{ . | markdownify }}</p>
     {{ end }}  */}}
-    {{ if not .Params.show_right_bar}}
-      <p class="centered-text"> <a id="author" href='{{ relref . "about"}}'>{{ .Site.Params.articles_author }}</a>
-    {{ else }}
-      <p class="centered-text"> <a id="articles-author" href='{{ relref . "about"}}'>{{ .Site.Params.articles_author }}</a>
+
+    {{ $show_author := or (not (isset .Params "show_author")) .Params.show_author }}
+    {{ $show_date := or (not (isset .Params "show_date")) .Params.show_date }}
+    {{ $show_reading_time := or (not (isset .Params "show_reading_time")) .Params.show_reading_time }}
+
+    {{ $_info_p_has_content := false }}
+    {{ if or $show_author $show_date $show_reading_time }}
+      <p class="centered-text">
+        {{ $_info_p_has_content = true }}
     {{ end }}
+
+    {{ if $show_author }}
+      {{ if not .Params.show_right_bar}}
+        <a id="author" href='{{ relref . "about"}}'>{{ .Site.Params.articles_author }}</a>
+      {{ else }}
+        <a id="articles-author" href='{{ relref . "about"}}'>{{ .Site.Params.articles_author }}</a>
+      {{ end }}
+    {{- end -}}
     {{/*  <p class="centered-text"> <a id="articles-author" href="{{ relref . 'about' }}">{{ .Site.Params.articles_author }}, </a>  */}}
+    {{- if $show_date -}}
     <time datetime="{{ .Date }}" class="centered-text"><svg style="margin-left:5px; margin-right:2px; position:relative; display:inline-block;" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -860 960 960" width="22px" fill="currentColor"><path d="M200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Zm280 240q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm-160 0q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm320 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM480-240q-17 0-28.5-11.5T440-280q0-17 11.5-28.5T480-320q17 0 28.5 11.5T520-280q0 17-11.5 28.5T480-240Zm-160 0q-17 0-28.5-11.5T280-280q0-17 11.5-28.5T320-320q17 0 28.5 11.5T360-280q0 17-11.5 28.5T320-240Zm320 0q-17 0-28.5-11.5T600-280q0-17 11.5-28.5T640-320q17 0 28.5 11.5T680-280q0 17-11.5 28.5T640-240Z"/></svg>{{ .Date | time.Format ":date_medium" }}</time>
     {{/*  &nbsp;&nbsp;  */}}
+    {{- end -}}
+    {{- if $show_reading_time -}}
       <time datetime="PT{{.ReadingTime}}M"><svg style="margin-left:4px; position:relative; display:inline-block;" xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -860 960 960" width="24px" fill="currentColor"><path d="M480-520q66 0 113-47t47-113v-120H320v120q0 66 47 113t113 47ZM160-80v-80h80v-120q0-61 28.5-114.5T348-480q-51-32-79.5-85.5T240-680v-120h-80v-80h640v80h-80v120q0 61-28.5 114.5T612-480q51 32 79.5 85.5T720-280v120h80v80H160Z"/></svg>{{ .ReadingTime }} {{ if gt .ReadingTime 1}} mins. {{else}} min. {{end}}</time>
-    </p>
-    {{ $tags := .Params.tags }}
-    <p class="centered-text">
-      {{ if $tags }}
-      {{ $lastIndex := sub (len $tags) 1 }}
-        {{/*  Tags:   */}}
-        {{/*  {{ range .Params.tags }}  */}}
-        {{ range $index, $tag := $tags }}
-          {{/*  TODO add tags links - Mostrar solo articles  */}}
-            {{/*  <a href='{{ "/tags/" | relLangURL }}{{ . | urlize }}'>{{ . | humanize }}</a>{{ if ne $key (sub (len $.Params.tags) 1) }},{{ end }}  */}}
-            {{/*  {{.}}  */}}
-            {{/*  <a href="{{ $tag.RelPermalink }}">{{- $tag -}}</a>  */}}
-            {{/*  <a class="article-tag">{{- $tag -}}</a>  */}}
-            {{/*  <a class="article-tag" href="/tags/{{$tag}}">{{- $tag -}}</a>  */}}
-            <a class="article-tag" href="{{absLangURL "tags/"}}{{$tag}}">{{- $tag -}}</a>
-            {{/*  {{- if ne $index $lastIndex -}}
-            ,
-            {{- else -}}
-            .
-            {{ end }}  */}}
+    {{- end -}}
+    
+    {{ if $_info_p_has_content }}
+      </p>
+    {{ end }}
+
+    {{/*  TAGS  */}}
+    {{- if or (not (isset .Params "show_tags")) .Params.show_tags -}}
+      {{ $tags := .Params.tags }}
+      <p class="centered-text">
+        {{ if $tags }}
+        {{ $lastIndex := sub (len $tags) 1 }}
+          {{/*  Tags:   */}}
+          {{/*  {{ range .Params.tags }}  */}}
+          {{ range $index, $tag := $tags }}
+            {{/*  TODO add tags links - Mostrar solo articles  */}}
+              {{/*  <a href='{{ "/tags/" | relLangURL }}{{ . | urlize }}'>{{ . | humanize }}</a>{{ if ne $key (sub (len $.Params.tags) 1) }},{{ end }}  */}}
+              {{/*  {{.}}  */}}
+              {{/*  <a href="{{ $tag.RelPermalink }}">{{- $tag -}}</a>  */}}
+              {{/*  <a class="article-tag">{{- $tag -}}</a>  */}}
+              {{/*  <a class="article-tag" href="/tags/{{$tag}}">{{- $tag -}}</a>  */}}
+              <a class="article-tag" href="{{absLangURL "tags/"}}{{$tag}}">{{- $tag -}}</a>
+              {{/*  {{- if ne $index $lastIndex -}}
+              ,
+              {{- else -}}
+              .
+              {{ end }}  */}}
+          {{ end }}
         {{ end }}
-      {{ end }}
-      
-      {{/*  Reading time  */}}
-    </p>
+        
+        {{/*  Reading time  */}}
+      </p>
+    {{- end -}}
   </hgroup>
 {{ end }}
