--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1011,12 +1011,12 @@ color: white;
 
 
 /*#region <a> links*/
-.articles-content a:not(.background-animation):not(.underline-animation){
-	text-decoration: underline;
-	&:hover{
-		color: var(--hover-color);
-	}
-}
+// .articles-content a:not(.background-animation):not(.underline-animation){
+// 	text-decoration: underline;
+// 	&:hover{
+// 		color: var(--hover-color);
+// 	}
+// }
 
 
 .background-animation{
@@ -1098,6 +1098,162 @@ color: white;
 	  }
 	}
 }
+
+
+// Style 6
+.style-6 {
+// a {
+	background-image: linear-gradient(var(--surface-1) 50%, var(--hover-color) 50%);
+	// background-image: linear-gradient(white 50%, var(--hover-color) 50%);
+	background-size: auto 175%;
+	transition: background .3s ease-in-out;
+
+	&:hover {
+		z-index: -1;
+		background-position-y: 100%;	
+		color: white;
+		
+	}
+}
+
+// #menu{
+// 	position: inherit;
+// }
+/* linkone */
+.link-1{
+	display: inline-block;
+}
+.link-1:before, .link-1:after {
+	content: '';
+	border-bottom: solid 1px rgb(255, 0, 0);
+	position: absolute;
+	bottom: 0;
+	width: 0;
+  }
+  
+  .link-1:before { left: 0; }
+  .link-1:after { right: 0; }
+  
+  .link-1:hover:before, .link-1:hover:after {
+	width: 50%;
+  }
+  
+  .link-1:before, .link-1:after {
+	-webkit-transition: all 0.2s ease;
+			transition: all 0.2s ease;
+  }
+
+
+// Style 3
+.style-3 {
+	position: relative;
+
+	&::before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 4px;
+		border-radius: 4px;
+		background-color: var(--text);
+		bottom: 0;
+		left: 0;
+		transform-origin: right;
+		transform: scaleX(0);
+		transition: transform .3s ease-in-out;
+	}
+
+	&:hover::before {
+		transform-origin: left;
+		transform: scaleX(1);
+	}
+	
+}
+
+
+// SOURCE: https://codepen.io/samvdh/pen/MmZzyR
+.button{
+	text-decoration: none;
+	// color: rgb(250, 5, 5);
+	// color: var(--hover-color);
+	color: var(--text-2);
+	font-weight: bold;
+	font-size: 20px;
+	position: relative;
+	padding: 10px;
+	display: inline-block;
+	&:hover{
+		color: var(--hover-color);
+	}
+}
+
+// BUTTON 2
+a.button.two:before, a.button.two:after{
+	opacity: 0;
+	transition: all 0.3s ease;	
+	  font-size: 20px;
+  }
+  a.button.two:before{
+	content: '[';
+  }
+  a.button.two:after{
+	content: ']';
+  }
+  
+  a.button.two:hover:before{
+	margin-right: 10px;
+	content: '[';
+	-webkit-transform: translateX(20px);
+	-moz-transform: translateX(20px);
+	transform: translateX(20px);
+	opacity: 1;
+	color: var(--hover-color);
+
+  }
+  a.button.two:hover:after{
+	margin-left: 10px;
+	content: ']';
+	-webkit-transform: translateX(-20px);
+	-moz-transform: translateX(-20px);
+	transform: translateX(-20px);
+	opacity: 1;
+	color: var(--hover-color);
+
+  }
+  .hover-scale{
+	transition: transform .5s ease-in-out;
+
+  }
+  .hover-scale:hover{
+	transform: scale(1.6);
+	transition: transform .2s ease-out;
+  }
+
+// BUTTON 4
+a.button.four:before, a.button.four:after{
+	content: '';
+	position: absolute;	
+	width: 0%;
+	height: 100%;
+	border-bottom: 2px solid var(--hover-color);
+	transition: width 0.3s ease;
+}
+
+a.button.four:before{
+	bottom: 0;
+	right: 50%;
+}
+a.button.four:after{
+	bottom: 0;
+	left: 50%;
+}
+a.button.four:hover:after, a.button.four:hover:before{
+	width: 40%;
+	transition: width .2s ease;
+}
+
+
+
+  
 
 /*#endregion <a> links*/
   
@@ -1571,7 +1727,7 @@ a#author{
 
 
 .articles-right-bar{
-	color: var(--text-2);
+		color: var(--text-2);
 
 	width: 250px;
 	height: 100vh; /* Full height */
@@ -1581,7 +1737,7 @@ a#author{
 	left: 0;
 	// background: #4e4e4e;
 	padding: 20px;
-	// border-right: 2px solid #ddd;
+		// border-right: 2px solid #ddd;
 	// overflow-y: auto; /* Scroll if content overflows */
 	// display: none;
 }
