--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -29,6 +29,7 @@
 <pre>.RelPermalink: {{ .RelPermalink }}</pre>
 <pre>.Title: {{ .Title }}</pre>
 <pre>💾 .File: {{ .File }}</pre>
+<pre>💾 .Layout: {{ .Layout }}</pre>
 {{/*  <pre>.GetInfo: {{ .GetInfo }}</pre>  */}}
 
 {{/*  {{ $file := .Get 0 }}  */}}
