--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -30,6 +30,7 @@
 <pre>.Title: {{ .Title }}</pre>
 <pre>💾 .File: {{ .File }}</pre>
 <pre>💾 .Layout: {{ .Layout }}</pre>
+<pre>💾 .Type: {{ .Type }}</pre>
 {{/*  <pre>.GetInfo: {{ .GetInfo }}</pre>  */}}
 
 {{/*  {{ $file := .Get 0 }}  */}}
