--- a/layouts/shortcodes/myshortcode.html
+++ b/layouts/shortcodes/myshortcode.html
@@ -1,3 +1,5 @@
+{{/*  DELETE delete this file  */}}
+
 {{/*  <{{ .Get "tag" }} class='{{ .Get "class" }}'>{{ .Get "text" }}</{{ .Get "tag" }}>  */}}
 {{/*  <{{ .Get "tag" | safeHTMLAttr }} class="{{ .Get "class" | safeHTMLAttr }}">{{ .Get "text" | safeHTMLAttr }}</{{ .Get "tag" | safeHTMLAttr }}>  */}}
 {{/*  <{{ .Get "tag" | safeHTMLAttr }} class="{{ .Get "class" | safeHTMLAttr }}">{{ .Get "text" | safeHTMLAttr }}</{{ .Get "tag" | safeHTMLAttr }}>  */}}
