#szk_pfp object-fit and width

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1419,6 +1419,10 @@ div.highlight pre, .articles-content pre {
 #szk_pfp {
 	/* height: 100px; */
 	// height: 30vh;
+	// display: block;
+	// width: auto;
+	width: 100%;
+	object-fit: cover;
 	height: 30vh;
 	// height: 30%;
 	// width: auto;
